fix limters errors

--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -6,16 +6,16 @@
   --first-gradient: rgb(0, 0, 0);
   --second-gradient: rgb(255, 254, 254);
   --Loader1: #fc0000;
-  --Loader: #00ff00;
+  --Loader: #0f0;
 }
 
 [data-theme=white] {
-  --background: #ffffff;
+  --background: #fff;
   --text-primary: rgb(0, 0, 0);
   --card-color-2: #fffffa;
   --bg-secondary: #000;
-  --first-gradient: #ffffff;
-  --second-gradient: rgb(0, 0, 0) ;
+  --first-gradient: #fff;
+  --second-gradient: rgb(0, 0, 0);
 }
 
 .details_container {
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .details_container .details-header {
   height: 60px;
   color: #fff;
@@ -32,14 +33,17 @@
   align-items: center;
   padding: 8px 0.7rem;
 }
+
 .details_container .details-header a {
   color: #fff;
   font-size: 20px;
 }
+
 .details_container .details-header p {
   flex: 1;
   text-align: center;
 }
+
 .details_container .main-clm {
   color: #fff;
   display: flex;
@@ -52,10 +56,12 @@
   background-repeat: no-repeat;
   background-position: left;
 }
+
 .details_container .main-clm h1 {
   font-size: 24px;
   padding: 10px 2rem;
 }
+
 .details_container .descr {
   height: 50px;
   color: #fff;
@@ -67,11 +73,13 @@
   padding: 10px 20px;
   box-shadow: 1px 10px 20px #181c22;
 }
+
 .details_container .coin-cards {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
+
 .details_container .coin-cards .card {
   height: 80px;
   display: flex;
@@ -80,6 +88,7 @@
   align-items: center;
   font-size: 16px;
 }
+
 .details_container .coin-cards .card:nth-child(even) {
   background-color: #000;
-}/*# sourceMappingURL=Details.css.map */
+}
