--- a/src/styles/Cryptos.css
+++ b/src/styles/Cryptos.css
@@ -6,16 +6,16 @@
   --first-gradient: rgb(0, 0, 0);
   --second-gradient: rgb(255, 254, 254);
   --Loader1: #fc0000;
-  --Loader: #00ff00;
+  --Loader: #0f0;
 }
 
 [data-theme=white] {
-  --background: #ffffff;
+  --background: #fff;
   --text-primary: rgb(0, 0, 0);
   --card-color-2: #fffffa;
   --bg-secondary: #000;
-  --first-gradient: #ffffff;
-  --second-gradient: rgb(0, 0, 0) ;
+  --first-gradient: #fff;
+  --second-gradient: rgb(0, 0, 0);
 }
 
 .cryptos_row .description {
@@ -31,6 +31,7 @@
   padding: 0.5rem;
   box-shadow: 1px 2px 10px 5px #181c22;
 }
+
 .cryptos_row .description .search-box {
   background-color: #fefefe;
   height: 40px;
@@ -42,6 +43,7 @@
   border-radius: 30px;
   box-shadow: 0 2px 10px #686868;
 }
+
 .cryptos_row .description .search-box input {
   width: 0;
   border: none;
@@ -49,19 +51,23 @@
   transition: 0.5s;
   background-color: transparent;
 }
+
 .cryptos_row .description .search-box:hover input {
   width: 210px;
 }
+
 .cryptos_row .description .search-box a #search-icon {
   display: flex;
   align-items: center;
   color: var(--background);
   font-size: 18px;
 }
+
 .cryptos_row .all_cryptos {
   display: flex;
   flex-wrap: wrap;
 }
+
 .cryptos_row .all_cryptos .container {
   color: var(--text-primary);
   width: 50%;
@@ -69,45 +75,56 @@
   text-align: center;
   padding: 0.4rem;
 }
+
 .cryptos_row .all_cryptos .container:nth-child(odd) {
   background-color: var(--background);
 }
+
 .cryptos_row .all_cryptos .container:nth-child(even) {
   background-color: var(--card-color-2);
 }
+
 .cryptos_row .all_cryptos .container:nth-child(4n-1) {
   background-color: var(--card-color-2);
 }
+
 .cryptos_row .all_cryptos .container:nth-child(4n) {
   background-color: var(--background);
 }
+
 .cryptos_row .all_cryptos .container .card-row {
   width: 100%;
   display: flex;
   flex-direction: column;
 }
+
 .cryptos_row .all_cryptos .container .card-row #arrow-icon {
   width: 100%;
   text-align: right;
   padding: 10px;
 }
+
 .cryptos_row .all_cryptos .container .card-row .img-clm {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .cryptos_row .all_cryptos .container .card-row .img-clm img {
   width: 80px;
   height: 80px;
   background-color: transparent;
 }
+
 .cryptos_row .all_cryptos .container .card-row .crypto-card {
   margin-top: 0.6rem;
 }
+
 .cryptos_row .all_cryptos .container .card-row .crypto-card .green_p {
   color: rgb(0, 129, 0);
 }
+
 .cryptos_row .all_cryptos .container .card-row .crypto-card .red_p {
   color: rgb(141, 0, 0);
   font-weight: 700;
-}/*# sourceMappingURL=Cryptos.css.map */
+}
